@@ -1508,7 +1508,7 @@ with %COMPAT.
 will prevent the sending of any TLS extensions in client side. Note
 that TLS 1.2 requires extensions to be used, as well as safe
 renegotiation thus this option must be used with care. When this option
-is set with TLS1.3 enabled the session behavior is undefined.
+is set no versions later than TLS1.2 can be negotiated.
 
 @item %NO_TICKETS @tab
 will prevent the advertizing of the TLS session ticket extension.
